# orangehrm-robotframework

./: .gitignore  README.md  nginx.conf  pyproject.toml  report-serve.sh  requirements.txt  robot_tests.yaml  user_data.xlsx
resources/data/: api_helper.py  config.ini  config_end_url.ini  config_parser.py  config_reader.py  locators.yaml  test_data.csv  test_data.yaml
resources/data/json_files/: test_data.json
resources/keywords/: ui_keywords.robot
resources/keywords/optimized_po/: api_integration.robot  base.robot  browser_script.robot  common_wrapper.robot  config_parser_keywords.robot  landing_page.robot  page_title_keywords.robot
resources/libraries/: CustomLibrary.py  config_manager.py  database_manager.py  excel_manager.py  implement.py  user_data.xlsx  utility_functions.py
resources/variables/: variables.robot
runner/: regression_test.bat
tests/reference/: test_custom_func.robot
